# TandOrbit

./: .gitignore  LICENSE  README.md  dmg_background.tiff  dmg_icon.icns  icon_white_bg.icns  new_icon.icns  pyproject.toml  requirements.txt  setup.py  start.command  tandorbit.spec  tandorbit_gui.spec
.github/workflows/: build.yml
app/: __init__.py  agent_main.py  config.py  enums.py  events.py  gui_main.py  main.py  models.py  plugin_base.py  updater.py
app/communication/: __init__.py  agent_server.py  discovery.py  mac_client.py
app/controller/: controller.py
app/gui/: __init__.py  log_viewer.py  main_window.py  requirements_dialog.py  settings_dialog.py  tray.py
app/scheduler/: action_pipeline.py  actions.py  scheduler.py
app/state/: state_machine.py
config/: default.yaml
docs/: 使用说明.md  软件设计说明书.md  项目规划说明书.md
packaging/: runtime_hook.py  tandorbit.spec  tandorbit_agent.spec  tandorbit_gui.spec
plugins/audio/: __init__.py  plugin.py
plugins/betterdisplay/: __init__.py  plugin.py
plugins/clipboard/: __init__.py  plugin.py
plugins/ddc/: __init__.py  plugin.py
plugins/deskflow/: __init__.py  plugin.py
plugins/multimonitortool/: __init__.py  plugin.py
plugins/wol/: __init__.py  plugin.py
resources/: icon.icns  new_icon.icns
scripts/: fix_bundle_for_codesign.py  install_agent.bat  make_tray_icon.py  uninstall_agent.bat
tests/: test_action_pipeline.py  test_config.py  test_event_bus.py  test_state_machine.py
